Added functionality to delete scrums
Added the functionality and its internationalization

--- a/Scrumdinger/Localizable.xcstrings
+++ b/Scrumdinger/Localizable.xcstrings
@@ -211,6 +211,16 @@
         }
       }
     },
+    "Delete" : {
+      "localizations" : {
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Eliminar"
+          }
+        }
+      }
+    },
     "Dismiss" : {
       "localizations" : {
         "es" : {
